src/app/pages/home/home.page.scss
.section {
  margin-left: 1rem;
  margin-right: 1rem;
  margin-bottom: 1rem;

  &:first-child {
    margin-top: 1rem !important;
  }

  &.quick-access {
    display: flex;
    flex-direction: column;

    > *:not(:last-child) {
      margin-bottom: 1rem;
    }

    > button {
      max-width: fit-content;
    }
  }
}

